infrastructure/backend/backend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-svc
  namespace: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: backend-port
