infrastructure/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: backend
  labels:
    name: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.alv.pp.ua
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /users(.*)
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
